--- a/desktop.ini
+++ b/desktop.ini
@@ -1,4 +1,4 @@
 [.ShellClassInfo]
-IconFile=D:\Program Files\ecloud\eCloud.exe
+IconFile=D:\Program Files (x86)\ecloud\eCloud.exe
 IconIndex=1
-IconResource=D:\Program Files\ecloud\eCloud.exe,1
+IconResource=D:\Program Files (x86)\ecloud\eCloud.exe,1
